# dual

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dualization.sln  README.md
BEGK/: BEGK.vcproj  BEGK.vcxproj  BEGK.vcxproj.filters
BMR/: BMR.vcproj  BMR.vcxproj  BMR.vcxproj.filters  SuperSet.cpp  kihon.cpp  readme.txt
DL/: DL.cpp  DL.vcproj  DL.vcxproj  DL.vcxproj.filters  kihon.cpp  readme.txt
DualizationLib/: AOT1.cpp  Antichain.h  BoolMatrixPreparation.cpp  Callbacks.cpp  Callbacks.h  Counters.h  CoverCollector.cpp  DualizationLib.vcxproj  DualizationLib.vcxproj.filters  FileWriters.cpp  FrequentInfrequentTask.cpp  FrequentInfrequentTask.h  GeneticDualizer.cpp  GeneticDualizer.h  GraphPoset.cpp  IPoset.cpp  IPoset.h  JYPDualizer.h  MIGRAS.cpp  NumberChain.cpp  PUNC.h  PosetBase.h  PosetItem.cpp  PosetsDualizationNode.h  PosetsDualizationTask.h  Pruning.cpp  RUNC.h  ReadMe.txt  Runc.cpp  RuncFixed.h  Solver.cpp  SubsetsPoset.cpp  SubsetsPoset.h  WeightBoundsPruning.cpp  WeightBoundsPruning.h  Weighters.h  stdafx.cpp  stdafx.h
DualizationLib.Test/: AntichainTests.cpp  CoverCollectorsTests.cpp  DualizationLib.Test.vcxproj  DualizationLib.Test.vcxproj.filters  FileWritersTests.cpp  FrequentInfrequentTests.cpp  GeneticDualizerTests.cpp  IntervalLatticeTests.cpp  PUNCTests.cpp  PosetSelfTester.cpp  PruningTests.cpp  RUNCTests.cpp  stdafx.cpp  stdafx.h
Dualizer/: Dualizer.vcxproj  ReadMe.txt  main.cpp  stdafx.cpp  stdafx.h
KS/: KS.vcproj  KS.vcxproj  KS.vcxproj.filters  thg.c  thg.pas
LogicalAnalisysLib/: BinaryClassifierAdaptor.h  BinaryClassifierNormalizer.h  BinaryClassifierVoter.cpp  BinaryClassifierVoter.h  BinaryECFeatureSelector.cpp  BinaryLearnerAdaptor.cpp  BoolBinaryOperation.h  BoostingLearner.cpp  BoostingLearner.h  CmpFitMatrixBuilder.cpp  CmpMatrixBuilder.h  Comparers.cpp  CoverMatrix.cpp  Dataset.cpp  Dataset.h  EC.h  ECVotingLearner.h  ECmp.h  ECmpByRankFeatureSelector.h  ECmpVoting.cpp  ECmpVotingLearner.cpp  ECmpVotingLearner.h  FTVoting.cpp  FTVotingLearner.h  FeatureSelectorBase.cpp  FeatureSelectorBase.h  FeatureValue.cpp  FitMatrix.cpp  InformativityCondition.h  InitECFeatureSelector.h  LazyFeatureSelector.cpp  LogicalAnalisysLib.vcxproj  LogicalAnalisysLib.vcxproj.filters  MultiByBinaryLearner.h  Object.h  PSVotingLearner.cpp  Predictions.cpp  Predictions.h  ReadMe.txt  stdafx.cpp  (+1 more)
LogicalAnalysisLib.Test/: DatasetTests.cpp  ECTests.cpp  ECVotingTests.cpp  (+7 more)
src/common/: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  Configurable.cpp  Configurable.h  IntegersFileReader.cpp  IntegersFileReader.h  IntegersFileWriter.cpp  IntegersFileWriter.h  IteratorRange.h  Randomizer.h  Registrator.h  bit_chunk.h  bit_mask.h  bit_matrix.h  bit_vector.h  bits.cpp  bits.h  blob.h  chunk.h  containers.h  errors.h  graph_algorithms.cpp  graph_algorithms.h  io_utils.cpp  io_utils.h  logging_utils.cpp  logging_utils.h  marked.h  math_utils.h  move_default.h  range.h  raw_vector.h  string_utils.h
src/dual/: AOT1.cpp  AOT1.h  Antichain.cpp  Antichain.h  BoolMatrixPreparation.cpp  BoolMatrixPreparation.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Counters.h  CoverCollector.cpp  CoverCollector.h  DualizationBacktrackAlgorithmBase.cpp  DualizationBacktrackAlgorithmBase.h  DualizationCounters.cpp  DualizationCounters.h  FileWriters.cpp  FileWriters.h  FrequentInfrequentEnumerator.cpp  FrequentInfrequentEnumerator.h  FrequentInfrequentTask.cpp  FrequentInfrequentTask.h  GeneticDualizer.cpp  GeneticDualizer.h  GraphPoset.cpp  GraphPoset.h  IPoset.cpp  IPoset.h  ISolver.h  IntervalLattice.cpp  IntervalLattice.h  JYPDualizer.h  MIGRAS.cpp  MIGRAS.h  MostCoverCollector.cpp  MostCoverCollector.h  NumberChain.cpp  NumberChain.h  PUNC.cpp  PUNC.h  (+33 more)
src/dual/solvers/: migras1.info  migras2.info  migras3.info
src/logical/: AlgorithmEstimator.cpp  AlgorithmEstimator.h  BinaryClassifierAdaptor.cpp  BinaryClassifierBoolAdaptor.h  BinaryClassifierNormalizer.cpp  BinaryClassifierVoter.cpp  BinaryECFeatureSelector.cpp  BinaryECFeatureSelector.h  BinaryLearnerAdaptor.cpp  BinaryLearnerAdaptor.h  BoolBinaryOperation.cpp  BoostingLearner.cpp  BoostingLogicalCorrector.cpp  BoostingLogicalCorrector.h  CMakeLists.txt  ClassFeatureSelector.cpp  ClassFeatureSelector.h  CmpFitMatrixBuilder.cpp  CmpFitMatrixBuilder.h  CmpMatrix.cpp  CmpMatrix.h  CmpMatrixBuilder.cpp  Comparers.cpp  Comparers.h  CoverMatrix.cpp  CoverMatrix.h  Dataset.cpp  Dataset.h  EC.h  ECVoting.cpp  ECVoting.h  ECVotingLearner.cpp  ECmp.h  ECmpByRankFeatureSelector.cpp  ECmpSetPredicate.h  ECmpSetPredicateBuilder.cpp  ECmpSetPredicateBuilder.h  ECmpVoting.cpp  ECmpVoting.h  ECmpVotingLearner.cpp  (+25 more)
src/tests/: CMakeLists.txt
src/tests/DualizationLib.Test/: AOT1Tests.cpp  AntichainTests.cpp  CMakeLists.txt  CoverCollectorsTests.cpp  DualPosetsTaskTests.cpp  FileWritersTests.cpp  FrequentInfrequentTests.cpp  GeneticDualizerTests.cpp  GraphPosetTests.cpp  IntervalLatticeTests.cpp  MIGRASIntervalsTests.cpp  MIGRASTests.cpp  NumberChainPosetTests.cpp  PUNCTests.cpp  PosetSelfTester.cpp  PosetSelfTester.h  PruningTests.cpp  RUNCTests.cpp  RuncFixedTests.cpp
src/tests/DualizationLib.Test/data/: achain1.info  antichains-40x30-bin-10-2.csv  dual-posets-task4.info  fif-task1.info  graphposet1.json  intervals2.csv  numberchains-30.json  poset1.info  pricegraph-10.json  pricegraph-40x30-uniform-10.csv
src/tests/LogicalAnalysisLib.Test/: AlgorithmEstimatorTests.cpp  BoostingTests.cpp  CMakeLists.txt  CmpMatrixTests.cpp  DatasetTests.cpp  ECTests.cpp  ECVotingTests.cpp  ECmpVotingInitLBTests.cpp  ECmpVotingLBTests.cpp  ECmpVotingTests.cpp  FTVotingTests.cpp  FeatureSelectionTests.cpp  PSVotingTests.cpp
src/tests/UtilsLib.Test/: BitChunkTests.cpp  BitsTests.cpp  CMakeLists.txt  CSVTests.cpp  GraphTests.cpp  IOTests.cpp  RegistratorTests.cpp
src/tests/data/: 10_50_7187.hg  15_35_12226.hg  6_6_4.hg  6_6_6.hg  A4.csv  A5.csv  A6.csv  dual-posets-task1.info  dual-posets-task3.info  integers.txt  intervals.csv  iris.txt  numberchains-10.json  numberchains-20x10-norm-0-1.csv  numberchains-40x10-norm-0-1.csv  write_bm_test.hg
(+232 files in other folders)
